[update] prevent form fields to center align

--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -103,6 +103,18 @@
 
 			.sui-dialog-content > .sui-box {
 
+				.sui-box-header,
+				.sui-box-body,
+				.sui-box-footer {
+
+					&.sui-block-content-center {
+
+						.sui-form-field {
+							text-align: initial;
+						}
+					}
+				}
+
 				.sui-box-header {
 					display: block;
 					padding-top: #{$sui-gutter-md * 2};
